# sigaa-cli

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  scripts.py  setup.py  test_sigaa.py
docs/: api.rst  code.rst  conf.py  index.rst  mailbox.rst  requirements.txt
sigaa/: api.py  mailbox.py  util.py
tests/: creds.py  test_api.py  test_mailbox.py  test_util.py
