[tool.poetry]
name = "sigaa-cli"
version = "0.1.0"
description = ""
authors = ["Bruno do Nascimento Maciel"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
sphinx = "^2.3.0"
sphinx_rtd_theme = "^0.4.3"
wheel = "^0.33.6"
check-manifest = "^0.40"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
