[tool.poetry]
name = "sigaa-cli"
version = "0.1.3"
description = "A uniffical Comand Line Interface that enable developers to execute some actions inside the SIGAA platform using python code. Independent of the university."
license = "GPL-3.0-or-later"
authors = ["Bruno do Nascimento Maciel"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
sphinx = "^2.3.0"
sphinx_rtd_theme = "^0.4.3"
wheel = "^0.33.6"
check-manifest = "^0.40"
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
