[tool.poetry]
name = "sigaa-cli"
version = "0.7.0"
description = "A uniffical Comand Line Interface that enable developers to execute some actions inside the SIGAA platform using python code. Independent of the university."
license = "GPL-3.0-or-later"
authors = ["Bruno do Nascimento Maciel"]

packages = [
    { include="sigaa", from="." },
]

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.41.0"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
sphinx = "^2.3.0"
sphinx_rtd_theme = "^0.4.3"
wheel = "^0.33.6"
check-manifest = "^0.40"
twine = "^3.1.1"
poetry-version = "^0.1.5"
pylint = "^2.4.4"
autopep8 = "^1.4.4"

[tool.poetry.scripts]
test = "scripts:test"
publish = "scripts:publish"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
